- #139 change in advisory platform or product list influences the other
- #143 CVE details popup on assess page
- #148 stopping in taranis which is already stopped will not change a thing
- #149 remove trailing white-spaces before signing
- #153 not showing statistics
- #164 improve "taranis install" from git
- #167 showing custom searches for user 
- fix REST and Taranis4u
- restore assess shortcut 'v'
- silence sparse warnings in phising checker

Improvements:
- support RedHat 7.4EL
- #79 Upgrade license from EUPL 1.1 to EUPL 1.2
- #79 Change the way that copyright and license is included in the code.
- #79 Remove personal names from the code
- allow home of taranis in other tree, f.i. /opt
- accept missing / after br in sending templates
- group-write on apache log directory
- #163 prefer local in $PATH 
- #168 source profile from (cron) script

=== Version 3.4.0

Security fixes
- Fixed vulnerabilities reported by MilCERT Austria:
   - Stored XSS vulnerability in the HTMLFeed parser.
   - XSS vulnerability in the sources import dialog.
   - XSS vulnerability in displaying email attachment filenames.

Improvements:
- The Taranis page adapts to two screen widths, FullHD and half-width FullHD.
- Comments and actions in Analysis items are improved.
- The menu shows unread items per Assess category.
- Extracted CVE-IDs are now shown directly in Assess items.
- Number of results is shown in Assess.
- New Taranis logo.
- Using postgres trigrams to search faster.
- By default passwords are now hashed with bcrypt with cost factor 10. Old
  passwords are updated transparently.
- Sequence ids get separate ranges (optional).
- Button copy assess item to clipboard (shortcut 'e').
- Toggle to only show 'in use' platforms and products when writing an advisory.
- Support for SELinux installation (experimental).
- Much faster archiving of items.
- Twitter retweets will not show up again.
- The same assess items can be collected for different categories.